# phishtest

./: Cargo.toml  config.toml  test_config.toml
migrations/: 0001_initial.sql
src/: clearance.rs  config.rs  csp.rs  main.rs  storage.rs  turnstile.rs
static/: clearance.html
