[package]
name = "phishtest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0", features = ["cookies", "json"] }
bytes = "1"
base64 = "0"
base32 = "0"
regex = "1.11.1"
cookie = "0.18"
lazy_static = "1.5.0"
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }